# Bookstore

./: .dockerignore  Makefile  docker-compose.yml  dockerfile  manage.py  pyproject.toml
.github/workflows/: build.yml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/viewsets/: product_viewset.py
