[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = ["JonasSousa <jonassousa.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
